scss/components/_portfolio.scss
@import 'components/variables';

.clearing {
  clear: both;
  padding-top: 40px;

  article {
    padding: 20px;
  }

  a.thumbnail.active, a.thumbnail:focus, a.thumbnail:hover, .thumbnail {
    border-radius: 0px;
  }

  .over-img {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: $nav;
    margin: 20px 20px 40px 20px;
    padding-top: 20px;
    padding-left: 20px;

    visibility: hidden;
    opacity: 0;
    transition: ease all .5s;
  }

  article:hover .over-img {
    visibility: visible;
    opacity: 1;
    transition: ease all .5s;

  }

  ul {
    margin-top: 40px;
    list-style: none;
    padding: 0px;
    display: flex;
    flex-wrap: wrap;

    li {
      display: inline;
      margin-right: 15px;
      font-size: 15px;
      font-weight: lighter;
    }
  }

  h3 {
    font-weight: lighter;
  }

  p {
    font-size: 17px;
    font-style: italic;
    font-weight: lighter;
  }
}

h2:nth-child(1) {
  margin-bottom: 0px;
}

h2:nth-child(2) {
  margin-top: 0px;
}

.my-info {

  h2 {
    margin-bottom: 30px;
  }

  p {
    line-height: 24px;
  }

}

@media(max-width: 400px) {

.clearing {
    article:hover .over-img {
      visibility: hidden;
    }
  }

}

